--- a/text/citace.bib
+++ b/text/citace.bib
@@ -34,18 +34,37 @@
 	}
 
 
-@article{dosis3,
-	author = {{Narici, Livio} and {Casolino, Marco} and {Di Fino, Luca} and {Larosa, Marianna} and {Picozza, Piergiorgio} and {Zaconte, Veronica}},
-	title = {Radiation survey in the International Space Station},
-	DOI= "10.1051/swsc/2015037",
-	url= "https://doi.org/10.1051/swsc/2015037",
-	journal = {J. Space Weather Space Clim.},
-	year = 2015,
-	volume = 5,
-	pages = "A37",
+@article{toNemecky,
+title = "Characteristic of the radiation field in low earth orbit and in deep space ",
+journal = "Zeitschrift für Medizinische Physik ",
+volume = "18",
+number = "4",
+pages = "233 - 243",
+year = "2008",
+note = "",
+issn = "0939-3889",
+doi = "https://doi.org/10.1016/j.zemedi.2008.06.015",
+url = "http://www.sciencedirect.com/science/article/pii/S0939388908000792",
+author = "Guenther Reitz",
+keywords = "cosmic radiation",
+keywords = "radiation measurementsüsselwörter",
+keywords = "kosmische Strahlung",
+keywords = "Messungen des Strahlenfeldes "
 }
 
-@article{spe_iss,
+
+%@article{dosis3,
+    author = {{Narici, Livio} and {Casolino, Marco} and {Di Fino, Luca} and {Larosa, Marianna} and {Picozza, Piergiorgio} and {Zaconte, Veronica}},
+    title = {Radiation survey in the International Space Station},
+    DOI= "10.1051/swsc/2015037",
+    url= "https://doi.org/10.1051/swsc/2015037",
+    journal = {J. Space Weather Space Clim.},
+    year = 2015,
+    volume = 5,
+    pages = "A37",
+}
+
+%@article{spe_iss,
 	author = {{Di Fino, Luca} and {Zaconte, Veronica} and {Stangalini, Marco} and {Sparvoli, Roberta} and {Picozza, Piergiorgio} and {Piazzesi, Roberto} and {Narici, Livio} and {Larosa, Marianna} and {Del Moro, Dario} and {Casolino, Marco} and {Berrilli, Francesco} and {Scardigli, Stefano}},
 	title = {Solar particle event detected by ALTEA on board the International Space Station - The March 7th, 2012 X5.4 flare},
 	DOI= "10.1051/swsc/2014015",
@@ -77,6 +96,42 @@
     title={Study and development of track etch detectors for dosimetric purposes: dissertation thesis},
     keywords={spektroskopie; jaderná chemie; dielektrické materiály; detektory částic},
     language={English},
+}
+
+
+@ARTICLE{activeDetectors,
+  
+AUTHOR={Narici, Livio and Berger, Thomas and Matthiä, Daniel and Reitz, Günther},   
+	 
+TITLE={Radiation Measurements Performed with Active Detectors Relevant for Human Space Exploration},    
+	
+JOURNAL={Frontiers in Oncology},      
+	
+VOLUME={5},    
+
+PAGES={273},    
+	
+YEAR={2015},      
+	  
+URL={http://journal.frontiersin.org/article/10.3389/fonc.2015.00273},       
+	
+DOI={10.3389/fonc.2015.00273},      
+	
+ISSN={2234-943X},   
+   
+ABSTRACT={A reliable radiation risk assessment in space is a mandatory step for the development of countermeasures and long duration mission planning in human spaceflight.
+Research in radiobiology provides information about possible risks linked to radiation. In addition, for a meaningful risk evaluation, the radiation exposure has to be assessed to a sufficient level of accuracy. Consequently, both the radiation models predicting the risks and the measurements used to validate such models must have an equivalent precision. Corresponding measurements can be performed both with passive and active devices. The former are easier to handle, cheaper, lighter and smaller but they measure neither the time dependence of the radiation environment nor some of the details useful for a comprehensive radiation risk assessment. Active detectors provide most of these details and have been extensively used in the International Space Station (ISS).
+To easily access such an amount of data, a single point access is becoming essential. This review presents an ongoing work on the development of a tool which allows obtaining information about all relevant measurements performed with active detectors providing reliable inputs for radiation model validation.}
+}
+
+%kosmicke zareni
+@online{scaleHeight_wiki,
+    author={Wikipedia, Otevřená encyklopedie},
+    organization={Wikipedia, The Free Encyclopedia},
+    title={Scale height used in a simple atmospheric pressure model},
+    url={https://en.wikipedia.org/wiki/Scale_height#Scale_height_used_in_a_simple_atmospheric_pressure_model},
+    date={2017-04-27},
+    urldate={2017-05-10},
 }
 
 %ISS
@@ -172,12 +227,45 @@ ISS prodlouzeni do 2024
     urldate={2017-04-22},
 }
 
+%detektory
+%jadrnickova, spurny 2008; relativni odezva TLD pouzivane NPI
+@article{TLD_RR,
+title = "Dependence of thermoluminescent detectors relative response on the linear energy transfer; some examples of use ",
+journal = "Radiation Measurements ",
+volume = "43",
+number = "2–6",
+pages = "944 - 947",
+year = "2008",
+note = "Proceedings of the 15th Solid State Dosimetry (SSD15) ",
+issn = "1350-4487",
+doi = "https://doi.org/10.1016/j.radmeas.2007.11.041",
+url = "http://www.sciencedirect.com/science/article/pii/S1350448707005124",
+author = "F. Spurný and I. Jadrníčková",
+keywords = "Track etch detectors (TEDs)",
+keywords = "Thermoluminescent detectors (TLDs)",
+keywords = "Linear energy transfer (LET)",
+keywords = "LET spectrometry "
+}
+
+
 %dosis
-%@online{dosis_oulu,
-    %author={Ilya Usoskin},
-    %title={Cosmic Ray Station of the University of Oulu},
-    %url={http://http://cosmicrays.oulu.fi/},
-    %date={},
-    %organization={NASA},
-    %urldate={2017-05-01},
-%}
+@online{dosis_oulu,
+    author={Ilya Usoskin},
+    title={Cosmic Ray Station of the University of Oulu},
+    url={http://cosmicrays.oulu.fi},
+    date={},
+    organization={NASA},
+    urldate={2017-05-01},
+}
+
+@online{dosis_HSP1000,
+    author={ODZ ÚJF AVČR},
+    title={Mikroskop HSP-1000},
+    url={http://cesky.odz.ujf.cas.cz/home/vybaveni/mikroskop-hsp-1ooo},
+    date={ODZ ÚJF AVČR},
+    organization={},
+    urldate={2017-05-13},
+}
+
+
+%pozn.: clanky rozradit do kapitol
