--- a/text/parts/preamble.tex
+++ b/text/parts/preamble.tex
@@ -10,6 +10,7 @@
 \usepackage{graphicx}
 \graphicspath{{images/}}
 \usepackage[figurename=Obr.,
+            %tablename=Tab.,
             format=plain,
             labelfont=it,
             textfont=it]{caption}
@@ -29,6 +30,7 @@
 \usepackage{tabularx}
 \usepackage[]{longtable}
 \usepackage{booktabs}
+\usepackage{multirow}
 
 \makeatletter
 \renewcommand{\@makechapterhead}[1]{%
