--- a/text/citace.bib
+++ b/text/citace.bib
@@ -1,7 +1,7 @@
 %články
 @article{benton,
     title = "Space radiation dosimetry in low-Earth orbit and beyond ",
-    journal = "Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms ",
+    journaltitle = "Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms ",
     volume = "184",
     number = "1–2",
     pages = "255 - 294",
@@ -16,7 +16,7 @@
 	author = "T. Berger and others",
 	title = "{DOSIS \& DOSIS 3D}: long-term dose monitoring onboard the Columbus Laboratory of the International Space Station {(ISS)}",
 	url= "http://dx.doi.org/10.1051/swsc/2016034",
-	journal = "J. Space Weather Space Clim.",
+	journaltitle = "J. Space Weather Space Clim.",
 	year = "2016",
 	volume = "6",
 	pages = "39",
@@ -27,7 +27,7 @@
 	title = {DOSIS \& DOSIS 3D: radiation measurements with the DOSTEL instruments onboard the Columbus Laboratory of the ISS in the years 2009–2016},
 	DOI= "10.1051/swsc/2017005",
 	url= "https://doi.org/10.1051/swsc/2017005",
-	journal = {J. Space Weather Space Clim.},
+	journaltitle = {J. Space Weather Space Clim.},
 	year = 2017,
 	volume = 7,
 	pages = "A8",
@@ -36,7 +36,7 @@
 
 @article{toNemecky,
 title = "Characteristic of the radiation field in low earth orbit and in deep space ",
-journal = "Zeitschrift für Medizinische Physik ",
+journaltitle = "Zeitschrift für Medizinische Physik ",
 volume = "18",
 number = "4",
 pages = "233 - 243",
@@ -58,7 +58,7 @@ keywords = "Messungen des Strahlenfeldes "
     title = {Radiation survey in the International Space Station},
     DOI= "10.1051/swsc/2015037",
     url= "https://doi.org/10.1051/swsc/2015037",
-    journal = {J. Space Weather Space Clim.},
+    journaltitle = {J. Space Weather Space Clim.},
     year = 2015,
     volume = 5,
     pages = "A37",
@@ -69,7 +69,7 @@ keywords = "Messungen des Strahlenfeldes "
 	title = {Solar particle event detected by ALTEA on board the International Space Station - The March 7th, 2012 X5.4 flare},
 	DOI= "10.1051/swsc/2014015",
 	url= "https://doi.org/10.1051/swsc/2014015",
-	journal = {J. Space Weather Space Clim.},
+	journaltitle = {J. Space Weather Space Clim.},
 	year = 2014,
 	volume = 4,
 	pages = "A19",
@@ -79,12 +79,10 @@ keywords = "Messungen des Strahlenfeldes "
     author={Ambrožová,I. and Brabcová,K. and Spurný,F. and Shurshakov,V. A. and Kartsev,I. S. and Tolochek,R. V.},
     year={2011},
     title={Monitoring on board spacecraft by means of passive detectors},
-    journal={Radiation Protection Dosimetry},
+    journaltitle={Radiation Protection Dosimetry},
     volume={144},
     number={1-4},
     pages={605-610},
-    abstract={To estimate the radiation risk of astronauts during space missions, it is necessary to measure dose characteristics in various compartments of the spacecraft; this knowledge can be further used for estimating the health hazard in planned missions. This contribution presents results obtained during several missions on board the International Space Station (ISS) during 2005-09. A combination of thermoluminescent and plastic nuclear track detectors was used to measure the absorbed dose and dose equivalent. These passive detectors have several advantages, especially small dimensions, which enabled their placement at various locations in different compartments inside the ISS or inside the phantom. Variation of dosimetric quantities with the phase of the solar cycle and the position inside the ISS is discussed.;To estimate the radiation risk of astronauts during space missions, it is necessary to measure dose characteristics in various compartments of the spacecraft; this knowledge can be further used for estimating the health hazard in planned missions. This contribution presents results obtained during several missions on board the International Space Station (ISS) during 2005-09. A combination of thermoluminescent and plastic nuclear track detectors was used to measure the absorbed dose and dose equivalent. These passive detectors have several advantages, especially small dimensions, which enabled their placement at various locations in different compartments inside the ISS or inside the phantom. Variation of dosimetric quantities with the phase of the solar cycle and the position inside the ISS is discussed.;},
-    keywords={DOSIMETRY; NUCLEAR SCIENCE & TECHNOLOGY; PUBLIC, ENVIRONMENTAL & OCCUPATIONAL HEALTH; ENVIRONMENTAL SCIENCES; THERMOLUMINESCENT; TRACK-ETCH; RADIOLOGY, NUCLEAR MEDICINE & MEDICAL IMAGING; CHARGED-PARTICLES; Radiation Monitoring - instrumentation; Radiation Protection - methods; Radiometry - methods; Space Flight - methods; Radiation Monitoring - methods},
     issn={0144-8420},
     language={English},
 }
@@ -105,7 +103,7 @@ AUTHOR={Narici, Livio and Berger, Thomas and Matthiä, Daniel and Reitz, Günthe
 	 
 TITLE={Radiation Measurements Performed with Active Detectors Relevant for Human Space Exploration},    
 	
-JOURNAL={Frontiers in Oncology},      
+journaltitle={Frontiers in Oncology},      
 	
 VOLUME={5},    
 
@@ -231,7 +229,7 @@ ISS prodlouzeni do 2024
 %jadrnickova, spurny 2008; relativni odezva TLD pouzivane NPI
 @article{TLD_RR,
 title = "Dependence of thermoluminescent detectors relative response on the linear energy transfer; some examples of use ",
-journal = "Radiation Measurements ",
+journaltitle = "Radiation Measurements ",
 volume = "43",
 number = "2–6",
 pages = "944 - 947",
@@ -247,6 +245,34 @@ keywords = "Linear energy transfer (LET)",
 keywords = "LET spectrometry "
 }
 
+@article{cesky,
+    title="Spektra lineárního přenosu energie kosmického záření získaná detektory stop v pevné fázi metodou per partes",
+    author="Pachnerová Brabcová, K. and Ambrožová, I. and Davídková, M. and Nagasaki, Y. and Červenková, A. and Berger, T.",
+    journaltitle="Bezpečnosť jadrovej energie",
+    volume="25",
+    number="3/4",
+    pages="110 - 113",
+    year="2017",
+    language="czech",
+    issn="1210-7085"
+}
+
+@article{ssntd,
+title = "Fluence and dose of mixed space radiation by SSNTDs achievements and constraints ",
+journaltitle = "Radiation Measurements ",
+volume = "44",
+number = "9–10",
+pages = "724 - 728",
+year = "2009",
+note = "Proceedings of the 24th International Conferenceon Nuclear Tracks in Solids ",
+issn = "1350-4487",
+doi = "https://doi.org/10.1016/j.radmeas.2009.10.045",
+url = "http://www.sciencedirect.com/science/article/pii/S1350448709002212",
+author = "J.K. Pálfalvi",
+keywords = "Space dosimetry",
+keywords = "SSNTD",
+keywords = "Proton detection "
+}
 
 %dosis
 @online{dosis_oulu,
@@ -262,10 +288,10 @@ keywords = "LET spectrometry "
     author={ODZ ÚJF AVČR},
     title={Mikroskop HSP-1000},
     url={http://cesky.odz.ujf.cas.cz/home/vybaveni/mikroskop-hsp-1ooo},
-    date={ODZ ÚJF AVČR},
+    date={},
     organization={},
     urldate={2017-05-13},
 }
 
 
-%pozn.: clanky rozradit do kapitol
+%pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
