--- a/text/main.tex
+++ b/text/main.tex
@@ -2,8 +2,11 @@
 \documentclass[a4paper,12pt,oneside]{report}
 \input{parts/preamble}
 %\includeonly{parts/titlepage}
-\includeonly{parts/experimentDosis}
+%\includeonly{parts/experimentDosis}
 %\includeonly{parts/ISS,parts/experimentDosis, parts/detektory}
+%\includeonly{parts/praktickaCast}
+\includeonly{parts/detektory}
+%\includeonly{parts/detektory,parts/praktickaCast}
 \begin{document}
 \pagestyle{empty}
 
@@ -23,6 +26,8 @@
 \include{parts/detektory}
 
 \include{parts/experimentDosis}
+
+\include{parts/praktickaCast}
 \nocite{*}
 \printbibliography[title=Seznam literatury]
 \end{document}
