--- a/text/parts/ISS.tex
+++ b/text/parts/ISS.tex
@@ -47,13 +47,13 @@ Jedná se o laboratorní modul zaměřený na výzkum v biologii, materiálovýc
 Právě v tomto modulu probíhal experiment DOSIS a v současnosti běží experiment DOSIS3D. 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=\textwidth]{ISS_columbus.png}
+  \includegraphics[width=0.8\textwidth]{ISS_columbus.png}
   \caption{Poloha modulu Columbus v rámci ISS je vyznačena červeně; červená šipka zobrazuje směr letu ISS~\cite{dosis}.}
   \label{fig:columbus_poloha}
 \end{figure}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=\textwidth]{columbus_outside.jpg}
+  \includegraphics[width=0.8\textwidth]{columbus_outside.jpg}
   \caption{Modul Columbus ve srovnání s astronautem~\cite{columbus_outside}.}
   \label{fig:columbus_srovnani}
 \end{figure}
