--- a/text/parts/kosmickeZareni.tex
+++ b/text/parts/kosmickeZareni.tex
@@ -79,7 +79,7 @@ je přímo úměrný atmosférickému měřítku výšky (atmospheric density sc
 \subsection{Stínění}
 Stínění vesmírného objektu představuje jeden z nejdůležitějších faktorů ovlivňující charakter záření uvnitř vesmírného objektu. Zvyšením stínění se dosáhne snížení dávkového příkonu uvnitř objektu, avšak na druhou stranu se zvýší jakostní činitel záření $Q$, tedy potenciální nebezpečnost záření z hlediska zdraví astronautů. Vzrůst $Q$ je dán zpomalením primárních částic ve stínění, které vede ke zvýšení jejich LET (Linear energy tranfer, lineární přenos energie) \cite{toNemecky}.
 
-Tento jev lze pozorovat např. v měřeních prováděných univerzitou v San Franciscu v letech 1996-1997 na palubě ruské kosmické stanice Mir. Obr. \ref{fig:stineni} zobrazuje dvě LET spektra. Obě dvě byla naměřena detektory stop CR-39, přičemž jeden detektor byl silně stíněn (více než 40 g/cm$^2$) a druhý pouze slabě (méně než 20 g/cm$^2$). Pro LET menší než cca 100 keV/$\mu$m obě jsou spektra velmi podobná, nicméně pro větší hodnoty LET leží spektrum prvního detektoru znatelně výš než spektrum druhého detektoru \cite{benton}. To plně odpovídá informacím z prvního odstavce.
+Tento jev lze pozorovat např. v měřeních prováděných univerzitou v San Franciscu v letech 1996-1997 na palubě ruské kosmické stanice Mir. Obr. \ref{fig:stineni} zobrazuje dvě LET spektra. Obě dvě byla naměřena detektory stop CR-39, přičemž jeden detektor byl silně stíněn (více než 40 g/cm$^2$) a druhý slabě (méně než 20 g/cm$^2$). Pro LET menší než cca 100 keV/$\mu$m obě jsou spektra velmi podobná, nicméně pro větší hodnoty LET leží spektrum prvního detektoru znatelně výš než spektrum druhého detektoru \cite{benton}. To plně odpovídá informacím z prvního odstavce.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.6\textwidth]{stineni.png}
