--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -58,7 +58,7 @@ první sada pasivních detektorů spolu s aktivními detektory \mbox{DOSTEL-1,2}
 \begin{table}[H]
   \centering
 \footnotesize
-  \caption{Časový vývoj používaných sad pasivních detektorů. Tabulka dále obsahuje dobu, kterou daná sada strávila na misi (tj. od startu do návratu na Zem), v závorce je doba, po kterou pasivní detektory měřily; pokrytí je podíl těchto dvou dob. Poslední sloupec obsahuje rozmezí nadmořské výšky, ve které se ISS v daný časový úsek nacházela~\cite{dosis}. Sady 7, 8 a 9 experimentu DOSIS3D nebyly ještě zcela vyhodnoceny, sada 10 nebyla téhož experimentu nebyla vyhodnocena vůbec.}
+  \caption{Časový vývoj používaných sad pasivních detektorů. Tabulka dále obsahuje dobu, kterou daná sada strávila na misi (tj. od startu do návratu na Zem), v závorce je doba, po kterou pasivní detektory měřily; pokrytí je podíl těchto dvou dob. Poslední sloupec obsahuje rozmezí nadmořské výšky, ve které se ISS v daný časový úsek nacházela~\cite{dosis}. Sady 7, 8 a 9 experimentu DOSIS3D nebyly ještě zcela vyhodnoceny (květen 2017), sada 10 nebyla téhož experimentu nebyla vyhodnocena vůbec.}
   \label{tab:dosis_timeline_passive}
   \begin{tabularx}{\textwidth}{llllll}
 	\toprule
@@ -90,7 +90,7 @@ DOSIS3D	&1	&Květen 2012-	&125 (113)	&90,4	&397-417\\
   \end{tabularx}
   %\includegraphics[width=\textwidth]{dosis_timeline_passive}
 \end{table}
-\subsection{Vývoj nadmořské výšky a slunečního cyklu}\label{sec:dosis_altitudeSlunecniCyklus}<++> %špatné odsazení
+\subsection{Vývoj nadmořské výšky a slunečního cyklu}\label{sec:dosis_altitudeSlunecniCyklus} %špatné odsazení
 Naměřená data jsou ovlivněna řadou parametrů. Nadmořská výška a fáze slunečního cyklu jsou jedny z nejvýznamnějších. 
 
 Na obr. \ref{subfig:dosis_altitude} je znázorněn časový vývoj nadmořské výšky ISS. Pro DOSIS nadmořská výška nabývala hodnot z intervalu [337, 375] km, pro DOSIS3D nabývala hodnot z intervalu [398, 417] km. V obrázku lze vypozorovat prudký nárůst z cca 340 km do 375 km, který se udál ke konci experimentu DOSIS; tehdy již měřily pouze aktivní detektory. Změna nadmořské výšky ovlivňuje ozáření stanice (viz oddíl \ref{sec:kosmickeZareni_altitude}). 
@@ -193,10 +193,10 @@ NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhod
 
 
 Z TED používá NPI HARZLAS TD-1 a od roku 2016 i TASTRAK. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je tlustá 15,3 $\mu$m. Celkově je analyzována plocha o velikosti 0,09 cm$^2$. Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým LET; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším LET. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
-detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 8,04/20,1 $\mu$m; analyzuje se plocha o velikost 0,5 cm$^2$ (v obou případech). Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000, \cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
+detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 8,04/20,1 $\mu$m; analyzuje se plocha o velikost 0,5 cm$^2$ (v obou případech). Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000, \cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
 
-TASTRAK původně využívaný pouze MTA EK začíná být používán i ostatními organizacemi, jelikož různorodost využívaných TED a jejich způsobů vyhodnocení komplikuje vzájemné porovnávání a interpretaci naměřených dat. 
-%To. že nám (NPI) vyšla kalibrační krivka jinak než těm madarum, tak to psat az do praktické casti
+TASTRAK původně využívaný pouze MTA EK začíná být používán i ostatními organizacemi, jelikož různorodost využívaných TED a jejich způsobů vyhodnocení komplikuje vzájemné porovnávání a interpretaci naměřených dat \cite{cesky}. 
+%To. že nám (NPI) vyšla kalibrační krivka jinak než těm madarum, tak to psat do casti o detektorech
 
 Informace byly brány z \cite{dosis}.
 
